--- a/CheckYourEligibility-Parent/Views/Home/Privacy.cshtml
+++ b/CheckYourEligibility-Parent/Views/Home/Privacy.cshtml
@@ -3,112 +3,271 @@
     ViewData["Title"] = "Privacy policy";
 }
 
-<h1 class="govuk-heading-l">Privacy notice</h1>
-<p>Connect families to support is provided by the Department for Education (DfE). It stores no data when you search for services but do not sign in.</p>
-<p>When you sign in and make or respond to a connection request, the information is encrypted and stored in Connect families to support.</p>
-<p>This privacy notice describes what happens when you are signed in to Connect families to support. </p>
-<p>The Department for Education is joint data controller with various local authorities for data collected within this service. The local authority that your account is associated with shares data controller responsibility for your account with DfE.</p>
-<p>A data controller determines how and why personal data is processed. For more information, read the <a href="https://ico.org.uk/ESDWebPages/Entry/Z1001723">Department for Education’s entry in the Data Protection Public Register</a>.</p>
-<h2 class="govuk-heading-m">Authentication with GOV.UK One Login</h2>
-<p>We use GOV.UK One Login to sign you in to Connect families to support. GOV.UK One Login is provided by the Cabinet Office, who is an independent data controller. For more information about what data they collect and why, read the <a href="https://signin.account.gov.uk/privacy-notice">GOV.UK One Login privacy notice</a>.</p>
-<h2 class="govuk-heading-m">What data we collect</h2>
-<p>The personal data we collect from you is:</p>
+<h1 class="govuk-heading-l">Privacy Notice</h1>
+<h2 class="govuk-heading-m">Who we are</h2>
+
+<p>
+    This service is run by the Department of Education.
+</p>
+<p>
+    This means the DfE is the data controller for the <strong>Eligibility Checking Engine</strong> and decides how and why any personal data is processed, including by third parties on our behalf.
+</p>
+<p>
+    We will use the information you give us according to <!--<a href="https://www.gov.uk/government/organisations/department-for-education/about/personal-information-charter">-->DfE personal information charter.
+</p>
+<p>
+    This privacy policy is relevant to parents and/or guardians using the service, and also to any children you may be
+    checking or applying for.
+</p>
+<p>
+    It does not relate to the privacy of users elsewhere in the entitlement checking and applying process where other privacy statements may apply.
+</p>
+
+<h2 class="govuk-heading-m">Personal data standards</h2>
+
+<p>
+    To lawfully use your personal data, we need to meet one or more conditions in the data protection legislation.
+</p>
+<p>
+    You can read the <a href="https://www.gov.uk/government/organisations/department-for-education/about/personal-information-charter">DfE Personal information charter </a> for more information about the standards DfE adheres to when we collect, hold or use your and/or your child’s personal data.
+</p>
+<p>
+    When you use this service, we will use any personal information you give us for administration and research purposes.
+</p>
+
+<h2 class="govuk-heading-m">What personal data we use</h2>
+
+<p>
+    This service will use your
+</p>
 <ul class="govuk-list govuk-list--bullet">
-    <li>your name </li>
-    <li>your email address </li>
+    <li>
+        personal details as a parent or guardian, including your name and email address
+    </li>
+    <li>
+        your National Insurance (NI) number and/or Asylum Support Reference (previous known as National Asylum Support Service) number
+    </li>
+    <li>
+        any social and/or financial benefits claimed by you
+    </li>
+    <li>
+        child's/children’s details including first name(s), surname(s) and school(s), eligibility number(s) and date(s) of birth
+    </li>
+    <li>
+        <!--your IP address, and -->details of which version of web browser you use to access the service
+    </li>
+    <li>
+        information on how you use our site, based on cookies and page tagging techniques
+    </li>
+    <li>
+        any personal information in questions, queries, feedback or communications you make, including your email address, if you contact our support team
+    </li>
 </ul>
-<p>If you make connection requests for a local authority, we also collect: </p>
+<p></p>
+<p>
+    We must have a valid reason to collect your personal data – also known as ‘lawful basis’ under the The Data Protection Act 2018. Our lawful basis is that of 'public task', so that we can run the Entitlement checker as a service to you.
+</p>
+<p>
+    In relation to your child’s personal information, DfE has specific privacy policies. You can read Privacy information for:
+</p>
+<ul>
+    <li>
+        <a href="https://www.gov.uk/government/publications/privacy-information-children-and-young-people-under-18/privacy-information-children-and-young-people-under-18#using-your-data-to-protect-children-and-young-people">children and young people under 18 </a>
+    </li>
+    <li>
+        <a href="https://www.gov.uk/government/publications/privacy-information-early-years-foundation-stage-to-key-stage-3/privacy-information-early-years-foundation-stage-to-key-stage-3">early years foundation stage to key stage 3</a>
+    </li>
+    <li>
+        <a href="https://www.gov.uk/government/publications/privacy-information-key-stage-4-and-5-and-adult-education/privacy-information-key-stage-4-and-5-and-adult-education">key stage 4 and 5 and adult education </a>
+    </li>
+</ul>
+<h2 class="govuk-heading-m">How we use your data</h2>
+
+<p>
+    We will use your personal information to:
+</p>
+<ul class="govuk-list--bullet">
+    <li>
+        check if you or your child/children are eligible for entitlements such as free school meals
+    </li>
+    <li>
+        send eligibility outcomes to schools in order to register you and your child/children for the possible entitlement
+    </li>
+    <li>
+        send eligibility outcomes to local authorities
+    </li>
+    <li>
+        ensure that pupils entitled to free school meals receive them
+    </li>
+    <li>
+        ensure that schools receive additional funding known as pupil premium
+    </li>
+    <li>
+        enable us to identify which pupils are potentially eligible for entitlement to free school meals
+    </li>
+    <li>
+        ensure the protection of public funds
+    </li>
+    <li>
+        prevent and detect fraud
+    </li>
+    <li>
+        send you notifications, service updates and notices
+    </li>
+</ul>
+
+
+<h2 class="govuk-heading-m">How we protect your data</h2>
+
+
+<p>
+    When we process your information, we maintain your information’s confidentiality, integrity and availability;
+</p>
+<ul class="govuk-list--bullet">
+    <li>
+        confidentiality means only authorised users can view access, change, use your information
+    </li>
+    <li>
+        integrity means we ensure your information is correct and accurate
+    </li>
+    <li>
+        availability means we ensure your information is available, in a secure system, when required
+    </li>
+</ul>
+<p>
+    We comply with the  <a class="govuk-link" href="https://www.gov.uk/data-protection">Data Protection Act 2018 </a>to protect your personal information.
+</p>
+<p>
+    We will
+</p>
+<ul class="govuk-list--bullet">
+    <li>
+        tell you why we need the information
+    </li>
+    <li>
+        only ask for what we need
+    </li>
+    <li>
+        make sure no one has access to it who should not
+    </li>
+    <li>
+        only keep the information for as long as we need it
+    </li>
+</ul>
+<p>
+    Our users must comply with Data Protection regulations when handling information and understand how important it is to protect personal and other sensitive information.
+</p>
+<h2 class="govuk-heading-m">How long we keep your data</h2>
+
+<p>
+    We only keep your personal information for as long as we need it. We decide how long to keep your information based on what we need and also what the law says. All data is securely and permanently deleted at the end of the retention period. We call this our retention and disposal schedule.
+</p>
+<p>
+    We keep your personal information for 7 years. After this, it will be securely destroyed. This will usually be 7 years after the end of each contract.
+</p> <p>
+    This meets legal requirements for the retention of finance data.
+</p>
+<p>
+    When you finish checking you or your child’s entitlement, we'll
+</p>
+<ul class="govuk-list--bullet">
+    <li>
+        delete your personal information (unless you give us permission to pass it onto a school and/or local authority)
+    </li>
+    <li>
+        keep audit records of your user account activity for up to 6 years
+    </li>
+</ul>
+<p>
+    We can lawfully keep personal data processed purely for research and statistical purposes indefinitely.
+</p>
+<p>
+    This is under Data Protection Legislation and in compliance with the relevant data processing conditions.
+</p>
+
+<h2 class="govuk-heading-m">Your data protection rights</h2>
+
+
+<p>
+    You have the right to:
+</p>
+<ul class="govuk-list--bullet">
+    <li>
+        ask us for access to information about you that we hold.
+    </li>
+    <li>
+        have your personal data rectified, if it is inaccurate or incomplete
+    </li>
+    <li>
+        request the deletion or removal of personal data where there is no compelling reason for its continued processing
+    </li>
+    <li>
+        restrict our processing of your personal data (for example, permitting its storage but no further processing)
+    </li>
+    <li>
+        object to direct marketing (including profiling) and processing for the purposes of scientific or historical research and statistics
+    </li>
+    <li>
+        not be subject to decisions based purely on automated processing where it produces a legal or similarly significant effect on you
+    </li>
+</ul>
+<h2 class="govuk-heading-m">Asking to see your information</h2>
+
+<p>
+    If you want to see the personal information we hold about you in relation to this service. This is known as a subject access request (SAR).
+</p><p>
+    You can
+</p>
+<p></p>
+<ul>
+    <li>
+        complete the <a href="https://form.education.gov.uk/service/Contact_the_Department_for_Education">subject access request form</a>
+    </li>
+    <li>
+        email our support team to find out which DfE office to contact
+    </li>
+    <li>
+        address your Data Protection request to the <a href="mailto:dataprotection.office@education.gov.uk">data protection officer</a>
+    </li>
+</ul>
+<p>
+    If you want us to delete all the information we hold about you, <a href="mailto:dataprotection.office@education.gov.uk">email our support team</a>. There is no charge for this.
+</p>
+<p>
+    Sometimes we can withhold information, for example to protect national security. You can read more about your rights in relation to personal data at <a href="https://ico.org.uk/for-organisations/uk-gdpr-guidance-and-resources/individual-rights/individual-rights/right-to-be-informed/">Information Comissioners Office</a>.
+</p>
+<h3 class="govuk-heading-m">The right to lodge a complaint</h3>
+<p>
+    If you are unhappy with our use of your personal data, you have the right to raise any concerns with the <a href="https://ico.org.uk/global/contact-us/">Information Commissioner's Office.</a>
+</p>
+<h2 class="govuk-heading-m">Third party integration</h2>
+
+<p>
+    We use third party software to help us improve your experience of the Entitlement checker.
+</p>
+<p>
+    These include:
+</p>
 <ul class="govuk-list govuk-list--bullet">
-    <li>your phone number</li>
-    <li>the name of your local authority</li>
+    <li>
+        <a href="https://learn.microsoft.com/en-us/clarity/setup-and-installation/privacy-disclosure">Microsoft Clarity</a>
+    </li>
+    <li>
+        <a href="https://policies.google.com/technologies/partner-sites">Google analytics</a>
+    </li>
 </ul>
-<p>If you receive connection requests for a voluntary and community sector (VCS) organisation, we also collect:</p>
-<ul class="govuk-list govuk-list--bullet">
-    <li>your organisation</li>
-    <li>the name of your local authority</li>
-</ul>
-<p>We use <a href="cookies.html">cookies</a> to collect information on how you use the site.</p>
-<p>Where you provide your consent, we use <a href="https://support.google.com/analytics/topic/2919631">Google Analytics</a> cookies. Google Analytics processes information about: </p>
-<ul class="govuk-list govuk-list--bullet">
-    <li>your Internet Protocol (IP) address</li>
-    <li>your device and location</li>
-    <li>the pages you visit in Connect families to support</li>
-    <li>how long you spend on each page and what you click on</li>
-    <li>how you got to the service</li>
-</ul>
-<p>We will not combine analytics information with other data sets in a way that would directly identify you.</p>
-<h2 class="govuk-heading-m">Why we collect this data </h2>
-<p>We collect personal data to: </p>
-<ul class="govuk-list govuk-list--bullet">
-    <li>verify your identity</li>
-    <li>set up your account</li>
-    <li>send you email updates</li>
-    <li>analyse, monitor and improve the service</li>
-    <li>allow professionals to find the right support services for individuals and families, according to their specific needs</li>
-</ul>
-<h2 class="govuk-heading-m">How long we keep this data</h2>
-<p>We retain your personal data while you are an active user, and then for up to 7 years after the last time you use your Connect families to support account.</p>
-<h2 class="govuk-heading-m">Who we share this data with</h2>
-<p>As part of delivering the DfE services, we share your personal data with the local authority where you work, or where the service you are associated with operates.</p>
-<p>We also share your data with any VCS organisations you send requests to. </p>
-<p>We will not:</p>
-<ul class="govuk-list govuk-list--bullet">
-    <li>sell or rent your data to third parties</li>
-    <li>share your data with third parties for marketing purposes</li>
-</ul>
-<p>We will only share your personal data with other organisations if we are required to do so by law – for example, by court order, or to prevent fraud or other crime.</p>
-<h2 class="govuk-heading-m">Where this data is processed and stored</h2>
-<p>We design, build and run our systems to make sure that data is as safe as possible at any stage, both while it’s processed and when it’s stored.</p>
-<p>Your personal data is stored on our IT infrastructure and shared with our data processors, so it may be transferred and stored securely outside the United Kingdom. Where that’s the case it will be subject to equivalent legal protection through International Data Transfer Agreements or <a href="https://commission.europa.eu/law/law-topic/data-protection/international-dimension-data-protection/adequacy-decisions_en">Adequacy Decisions</a>.</p>
-<p>&ZeroWidthSpace;The data we collect with Google Analytics cookies is transferred and stored with Google, where we analyse it with Google Analytics software (GA4). We do not allow Google to use or share this data for their own purposes.</p>
-<h2 class="govuk-heading-m">How we protect this data and keep it secure</h2>
-<p>We are committed to keeping your data secure. We have procedures in place to secure your data and prevent unauthorised access or disclosure. For example, we protect data using varying levels of encryption. We also make sure that any third parties that we deal with keep all personal data they process on our behalf secure.</p>
-<h2 class="govuk-heading-m">Personal data rights</h2>
-<p>You have the right to:</p>
-<ul class="govuk-list govuk-list--bullet">
-    <li>request that we remove your personal data from the system</li>
-    <li>request a copy of your personal data - this will be provided in a structured, commonly used and machine-readable format</li>
-</ul>
-<p><a href="https://ico.org.uk/for-the-public/">Find out more about your personal data rights</a>.</p>
-<h2 class="govuk-heading-m">Questions and complaints</h2>
-<h3 class="govuk-heading-s">Contact your local authority</h3>
-<p><a href="https://www.gov.uk/find-local-council">Contact your local council</a> to access, update or correct the information they hold on you.</p>
-<h3 class="govuk-heading-s">Contact the DfE</h3>
-<p>You can contact us by using our <a href="https://form.education.gov.uk/service/Contact_the_Department_for_Education"> secure contact form</a> if you:</p>
-<ul class="govuk-list govuk-list--bullet">
-    <li>have any questions about anything on this page</li>
-    <li>think that your personal data has been misused or mishandled</li>
-    <li>want to <a href="https://www.gov.uk/government/organisations/department-for-education/about/personal-information-charter#how-to-make-a-subject-access-requestmake"> make a subject access request (SAR)</a></li>
-</ul>
-<p>Read about <a href="https://www.gov.uk/government/organisations/department-for-education/about/personal-information-charter"> how the DfE handles personal information in the personal information charter</a>.</p>
-<h3 class="govuk-heading-s">Contact the Data Protection Officer</h3>
-<p>You can also write to the Data Protection Officer, who provides independent advice and monitoring of DfE’s use of personal information:</p>
-<div class="govuk-inset-text">
-    <p>
-        Emma Wharram, Data Protection Officer
-        <br>Department for Education (B2.28)
-        <br>7 and 8 Wellington Place
-        <br>Leeds
-        <br>LS1 4AW
-    </p>
-</div>
-<p>If you consider that your personal data has been misused or mishandled, you may make a complaint to the Information Commissioner, who is an independent regulator:</p>
-<div class="govuk-inset-text">
-    <p>
-        Information Commissioner’s Office
-        <br>Wycliffe House
-        <br>Water Lane
-        <br>Wilmslow
-        <br>Cheshire
-        <br>SK9 5AF
-    </p><p>
-        Telephone: 0303 123 1113
-        <br>Email: <a href="icocasework@ico.org.uk">icocasework@ico.org.uk</a>
-    </p>
-</div>
-<p>Complaints to the Information Commissioner are without prejudice to your right to seek redress through the courts.</p>
-<h2 class="govuk-heading-m">Changes to this notice</h2>
-<p>This notice was last updated on 30 October 2023. It will be reviewed on 30 October 2024.</p>
-<p>We may change this privacy notice before its review date. When we make changes, we will add a change note at the bottom of this page. Any changes to this privacy notice will apply to you and your data immediately. If these changes affect how your personal data is processed, DfE will take reasonable steps to make sure you know.</p>
-<h2 class="govuk-heading-m">Our legal basis for processing your data</h2>
-<p>The legal basis for processing your data is public task article 6(1)(e) of the General Data Protection Regulation (GDPR).</p>
+<p>We will store this information in a way that it cannot be used to identify you. </p>
+
+<h2 class="govuk-heading-m">Last updated</h2>
+
+<p>
+    This version was last updated in <b>July 2024.</b>
+</p>
+<p>
+    We may need to update this privacy notice, so we recommend you revisit this from time to time.
+</p>
+<h2 class="govuk-heading-m">Further information</h2>
+
+<p>
+    Get more information about the <a href="https://www.gov.uk/government/organisations/department-for-education">Department for Education.</a>
+</p>
