--- a/CheckYourEligibility-Admin/Views/Check/Enter_Child_Details.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Enter_Child_Details.cshtml
@@ -15,7 +15,7 @@
     Provide details of your children
 </h1>
 
-<form asp-controller="School" asp-action="Enter_Child_Details" method="post" novalidate>
+<form asp-controller="Check" asp-action="Enter_Child_Details" method="post" novalidate>
     @for (int i = 0; i < Model.ChildList.Count; i++)
     {
         <div id="childNumber@(@i)">
@@ -25,7 +25,7 @@
             </legend>
 
             @if (i > 0){
-            <button asp-controller="School" asp-action="Remove_Child" asp-route-index="@i" class="govuk-button govuk-button--secondary moj-add-another__add-button govuk-!-margin-bottom-4 delete-button" data-module="govuk-button">
+            <button asp-controller="Check" asp-action="Remove_Child" asp-route-index="@i" class="govuk-button govuk-button--secondary moj-add-another__add-button govuk-!-margin-bottom-4 delete-button" data-module="govuk-button">
                 Remove Child @(i + 1)
             </button button>
             }
@@ -108,7 +108,7 @@
 
     <div class="add-button-container">
         <div class="moj-button-action">
-            <button asp-controller="School" asp-action="Add_Child" class="govuk-button govuk-button--secondary moj-add-another__add-button govuk-!-margin-bottom-4" data-module="govuk-button">
+            <button asp-controller="Check" asp-action="Add_Child" class="govuk-button govuk-button--secondary moj-add-another__add-button govuk-!-margin-bottom-4" data-module="govuk-button">
                 Add another child
             </button>
         </div>
