--- a/CheckYourEligibility-Admin/Views/Home/Index.cshtml
+++ b/CheckYourEligibility-Admin/Views/Home/Index.cshtml
@@ -98,7 +98,7 @@
                     <div class="dfe-card-container">
                         <div class="def-card">
                             <h2 class="govuk-heading-m">
-                                <a class="govuk-link govuk-link--no-visited-state dfe-card-link--header" href="search">Search all records</a>
+                                <a class="govuk-link govuk-link--no-visited-state dfe-card-link--header" href="Application/Search">Search all records</a>
                             </h2>
                             <p>Search all pupil free school meal records and export results.</p>
                         </div>
