--- a/CheckYourEligibility-Parent/Views/Check/Outcome/Not_Found.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Outcome/Not_Found.cshtml
@@ -1,9 +1,20 @@
 ﻿<div class="govuk-grid-column-full">
+
     <h1 class="govuk-heading-l">We could not check your children’s entitlement to free school meals</h1>
-    <p>The personal information you entered doesn’t match the departmental records.</p>
-    <p>Please try again, ensuring you’ve entered your details accurately and in the correct format.</p>
-    <p>If you’ve received this message multiple times please contact your school administrator.</p>
+
+    <p>It’s possible that the Universal Credit statements needed to perform the check aren’t currently available.</p>
+
+    <h2 class="govuk-heading-m">What you can do</h2>
+
+    <p>If you have up-to-date Universal Credit statements as supporting evidence, show these to your school’s administrator. </p>
+    <p><strong>Important: </strong> Your annual net earned income must be no higher than £7,400.  </p>
+    <p>Any documents you provide must show your income and the date. </p>
+    <p>If you are an asylum seeker, check to see what asylum support is available. </p>
+
+    <h3 class="govuk-heading-s">Further guidance </h3>
+
+    <p>More in-depth information on supporting evidence can be found in the <a target="_blank" href="/Home/Parental_Guidance">guidance notes for parents and guardians. </a></p>
 
     <p><a href="javascript:window.history.back()">Try again</a></p>
-</div>
 
+</div>
