--- a/CheckYourEligibility-Parent/Views/Check/Outcome/Not_Found.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Outcome/Not_Found.cshtml
@@ -4,6 +4,6 @@
     <p>Please try again, ensuring you’ve entered your details accurately and in the correct format.</p>
     <p>If you’ve received this message multiple times please contact your school administrator.</p>
 
-    <p><a href="javascript:window.history.back()">Try again</a></p>
+    <p><a href="../Check/Enter_Details">Try again</a></p>
 </div>
 
