--- a/CheckYourEligibility-Parent/Views/Check/Outcome/Not_Found_Pending.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Outcome/Not_Found_Pending.cshtml
@@ -11,5 +11,5 @@
         <h3 class="govuk-heading-s">Further guidance </h3>
         <p>More in-depth information on supporting evidence can be found in the guidance notes for parents and guardians. </p>
 
-    <p><a href="javascript:window.history.back()">Try again</a></p>
+    <p><a href="../Check/Enter_Details">Try again</a></p>
 </div>
