--- a/CheckYourEligibility-Parent/Views/Check/Outcome/Could_Not_Check.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Outcome/Could_Not_Check.cshtml
@@ -5,5 +5,6 @@
     <p>An asylum support reference number can usually be found on letters from the Home Office.</p>
     <p>If you need more help, please contact your school administrator.</p>
 
-    <p><a href="javascript:window.history.back()">Try again</a></p>
+
+    <p><a href="../Check/Enter_Details">Try again</a></p>
 </div>
