Small content change for GOV.UK name

--- a/CheckYourEligibility-Parent/Views/Check/Outcome/Eligible.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Outcome/Eligible.cshtml
@@ -9,7 +9,7 @@
     <p>To get free school meals for your children, follow these steps online. This usually takes a few minutes.</p>
 
     <ol>
-        <li>Sign in or create a Govuk One Login account.</li>
+        <li>Sign in or create a GOV.UK One Login account.</li>
         <li>Enter the details of all your children and their schools.</li>
         <li>Submit your application to send it to your school.</li>
         <li>We'll send you an email to the one you registered with to let you know it has been completed.</li>
@@ -33,7 +33,7 @@
 
     <h2 class="govuk-heading-m">Further guidance and other ways to apply</h2>
     <p>If you need further support, <a target="_blank" href="/Home/Parental_Guidance">check the more detailed guidance</a>  for parents and guardians.</p>
-    <p>If you cannot apply online, you can fill in <a href="/Home/fsm_print_version">the 'Free school meals entitlement checker' form</a> and give it to your children's school. </p>
+    @* <p>If you cannot apply online, you can fill in <a href="/Home/fsm_print_version">the 'Free school meals entitlement checker' form</a> and give it to your children's school. </p> *@
 
     <div class="govuk-inset-text">
         It takes longer to apply through your school than it does online.
