--- a/CheckYourEligibility-Admin/Views/BulkUpload/BatchOutcome/Success.cshtml
+++ b/CheckYourEligibility-Admin/Views/BulkUpload/BatchOutcome/Success.cshtml
@@ -11,7 +11,7 @@
         <p class="govuk-body">Now download the checked file to see which parents can claim free school meals for their children.</p>
         <p>free-school-meal-outcomes-YYYMMDD.csv</p>
 
-         @Html.ActionLink("Download", "Batch_check_download", "BulkUpload", new { @class = "govuk-button" })
+         @Html.ActionLink("Download", "Batch_check_download", "BulkUpload",null, new { @class = "govuk-button" })
 
     </div>
 
