--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="govuk-width-container">
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-            <p class="govuk-heading-l">The children of this parent or guardian may not be entitled to free school meals</p>
+            <p class="govuk-heading-l">@TempData["OutcomeText"]</p>
             <p class="govuk-body">If the parent wishes to appeal, you’ll need to send their supporting evidence to your local authority for review.</p>
         </div>
     </div>
