--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Found_Pending.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Found_Pending.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-l">We could not check if this applicant’s children are entitled to free school meals</h1>
+        <h1 class="govuk-heading-l">>@TempData["laOutcome"]</h1>
         <p>It’s possible that the Universal Credit statements needed to perform the check aren’t currently available.</p>
         <h2 class="govuk-heading-m">What you can do</h2>
         <p>Please contact the parent/guardian to ask for their up-to-date Universal Credit statements.</p>
