--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Eligible.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Eligible.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-        <h1 class="govuk-heading-l">The children of this parent or guardian are entitled to free school meals</h1>
+        <h1 class="govuk-heading-l">@TempData["OutcomeText"]</h1>
 
 
         <h2 class="govuk-heading-m">What to do next</h2>
