Parental guidance page (#73)
* Added Parental_Guidance page and updated pages that need to link to it with latest content.

* Small content change for GOV.UK name

--- a/CheckYourEligibility-Parent/Views/Check/Outcome/Not_Eligible.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Outcome/Not_Eligible.cshtml
@@ -1,40 +1,32 @@
-﻿<h1 class="govuk-heading-l">Your children may not be entitled to free school meals</h1>
-<p> From the information you’ve provided, we cannot confirm if your children are entitled to free school meals. </p>
+﻿<div class="govuk-grid-column-full">
+    <h1 class="govuk-heading-l">Your children may not be entitled to free school meals</h1>
+    <p>From the information you’ve provided, we cannot confirm if your children are entitled to free school meals. </p>
 
-<p>If you think that they are entitled, you can;</p>
+    <p>If you think that they are entitled, you can;</p>
 
-<ol>
-    <li>Find supporting evidence. Check the supporting evidence list to see what's accepted.</li>
-    <li>Contact your childrens school(s) and send them the evidence.</li>
-    <li>The school(s) will work with your local authority to re-assess your free school meal claim, then let you know the result.</li>
-</ol>
+    <ol>
+        <li>Find supporting evidence. Check the supporting evidence list to see what's accepted.</li>
+        <li>Contact your childrens school(s) and send them the evidence.</li>
+        <li>The school(s) will work with your local authority to re-assess your free school meal claim, then let you know the result.</li>
+    </ol>
 
-<hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
+    <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
 
-<h2 class="govuk-heading-m">Accepted supporting evidence</h2>
-<p>To support your claim for free school meals, you can send:</p>
-<ul>
-    <li>up to three of your latest Universal Credit statements </li>
-    <li>
-        your latest tax credit statement form TC602A (Award Notices) or TC603R (Auto Renewal), showing you are receiving Working Tax Credit run-on
-    </li>
-    <li>
-        your latest tax credit statement form TC602A (Award Notices) or TC603R (Auto Renewal), showing you are receiving Child Tax Credit
-    </li>
-    <li>
-        a letter of Entitlement for Income Support
-    </li>
-    <li>
-        a letter of Entitlement for income-based Jobseeker’s Allowance
-    </li>
-    <li>
-        a letter of Entitlement for the guaranteed element of Pension Credit
-    </li>
-    <li>documents showing you are receiving relevant support under part VI of the Immigration and Asylum Act 1999 </li>
-</ul>
+    <h2 class="govuk-heading-m">Accepted supporting evidence</h2>
+    <p>To support your claim for free school meals, you can send:</p>
+    <ul>
+        <li>up to three of your latest Universal Credit statements </li>
+        <li>your latest tax credit statement form TC602A (Award Notices) or TC603R (Auto Renewal), showing you are receiving Working Tax Credit run-on</li>
+        <li>your latest tax credit statement form TC602A (Award Notices) or TC603R (Auto Renewal), showing you are receiving Child Tax Credit</li>
+        <li>a letter of Entitlement for Income Support</li>
+        <li>a letter of Entitlement for income-based Jobseeker’s Allowance</li>
+        <li>a letter of Entitlement for the guaranteed element of Pension Credit</li>
+        <li>documents showing you are receiving relevant support under part VI of the Immigration and Asylum Act 1999</li>
+    </ul>
 
-<h3 class="govuk-heading-m">Further guidance </h3>
+    <h3 class="govuk-heading-m">Further guidance </h3>
 
-<p>More in-depth information on supporting evidence can be found in <a href="../Home/Parental_Guidance" class="govuk-link">the guidance notes for parents and guardians.</a></p>
+    <p>More in-depth information on supporting evidence can be found in <a href="/Home/Parental_Guidance" class="govuk-link">the guidance notes for parents and guardians.</a></p>
 
-<p><a href="../Home/Index">Return to start</a></p>
+    <p><a href="/Home/Index">Return to start</a></p>
+</div>
