--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible.cshtml
@@ -33,6 +33,5 @@
 <div class="govuk-!-padding-bottom-2"></div>
 
 
-<p><a href="">Return to dashboard</a></p>
-
-<p><a href="">Sign out</a></p>
+<p> @Html.ActionLink("Return to dashboard", "index", "home")</p>
+<p> @Html.ActionLink("Sign Out", "SignOut", "Account")</p>
